reflectapi-demo/tests/success/hidden_field_without_default.rs
#[derive(serde::Deserialize, reflectapi::Input)]
struct MyStruct {
    #[reflectapi(hidden)]
    field: u32,
}

fn main() {}
