reflectapi-demo/tests/errors/hidden_on_tuple_struct_field.rs
#[derive(serde::Deserialize, reflectapi::Input)]
struct MyStruct(
    #[reflectapi(hidden)]
    u32,
);

fn main() {}
